# nfs-recompiled

./: .gitignore  CMakeLists.txt  README.md  disassemble_nfs2se.py  disassemble_nfs3hp.py
cmake/: toolchain-mingw64.cmake  toolchain-msvc-clang.cmake
disasm/: application.py  disassembler.py  dll.py  module.py  subroutine.py
disasm/codegen/: __init__.py  arguments.py  arithmetic.py  condition.py  cpu.py  fpu.py  jump.py  logic.py  memory.py  mmx.py  repeat.py  stack.py  string.py  subroutine.py
include/: cpu.h  fpu.h  mmx.h  x86.h
include/lib/: audio.h  event.h  file.h  gamepad.h  gliderenderer.h  glidetmu.h  library.h  memmap.h  mutex.h  palette.h  process.h  registry.h  renderer.h  socket.h  surface.h  thread.h  timer.h  winapp.h  window.h
include/nfs2se/: eacsnd.h
include/nfs3hp/: eacsnd.h  voodoo2a.h
include/winapi/: advapi32.h  com.h  ddraw.h  dinput.h  dsetup.h  dsound.h  gdi32.h  glide2x.h  kernel32.h  ole32.h  shell32.h  types.h  user32.h  version.h  winmm.h  wrapper.h  wsock32.h
include/winapi/ddraw/: idirectdraw2.h  idirectdrawpalette.h  idirectdrawsurface.h
include/winapi/dinput/: idirectinput2.h  idirectinputdevice.h
include/winapi/dsound/: idirectsound.h  idirectsound3dlistener.h  idirectsoundbuffer.h
src/lib/: cpu.cpp  dbgalloc.cpp  gliderenderer.cpp  glidetmu.cpp  library.cpp  memmap.cpp  mutex.cpp  palette.cpp  process.cpp  registry.cpp  renderer.cpp  socket.cpp  surface.cpp  thread.cpp  timer.cpp  winapp.cpp  window.cpp  x87.asm
src/lib/sdl-backend/: audio.cpp  event.cpp  file.cpp  gamepad.cpp
src/lib/winapi/: advapi32.cpp  com.cpp  ddraw.cpp  dinput.cpp  dsetup.cpp  dsound.cpp  gdi32.cpp  glide2x.cpp  kernel32.cpp  ole32.cpp  shell32.cpp  user32.cpp  version.cpp  winmm.cpp  wsock32.cpp
src/lib/winapi/ddraw/: idirectdraw2.cpp  idirectdrawpalette.cpp  idirectdrawsurface.cpp
src/lib/winapi/dinput/: idirectinput2.cpp  idirectinputdevice.cpp
src/lib/winapi/dsound/: idirectsound.cpp  idirectsound3dlistener.cpp  idirectsoundbuffer.cpp
src/nfs2se/: nfs2se_main.cpp
src/nfs2se/disassembly/: eacsnd.0.cpp  eacsnd.AUTO.cpp  eacsnd.DGROUP.cpp  eacsnd._edata.cpp  eacsnd._idata.cpp  eacsnd.cpp  nfs2se.0.cpp  nfs2se.1.cpp  nfs2se.10.cpp  nfs2se.11.cpp  nfs2se.12.cpp  nfs2se.13.cpp  nfs2se.14.cpp  nfs2se.15.cpp  nfs2se.16.cpp  nfs2se.17.cpp  nfs2se.18.cpp  nfs2se.19.cpp  nfs2se.2.cpp  nfs2se.20.cpp  nfs2se.21.cpp  nfs2se.22.cpp  nfs2se.23.cpp  nfs2se.24.cpp  nfs2se.25.cpp  nfs2se.26.cpp  nfs2se.27.cpp  nfs2se.28.cpp  nfs2se.29.cpp  nfs2se.3.cpp  nfs2se.30.cpp  nfs2se.31.cpp  nfs2se.32.cpp  nfs2se.33.cpp  nfs2se.34.cpp  nfs2se.35.cpp  nfs2se.36.cpp  nfs2se.4.cpp  nfs2se.5.cpp  nfs2se.6.cpp  (+7 more)
src/nfs3hp/: nfs3hp_main.cpp
src/nfs3hp/disassembly/: eacsnd.0.cpp  eacsnd.1.cpp  eacsnd.2.cpp  eacsnd.3.cpp  eacsnd.AUTO.cpp  eacsnd.DGROUP.cpp  eacsnd._edata.cpp  eacsnd._idata.cpp  eacsnd.cpp  nfs3hp.0.cpp  nfs3hp.1.cpp  nfs3hp.10.cpp  nfs3hp.11.cpp  nfs3hp.12.cpp  nfs3hp.13.cpp  nfs3hp.14.cpp  nfs3hp.15.cpp  nfs3hp.16.cpp  nfs3hp.17.cpp  nfs3hp.18.cpp  nfs3hp.19.cpp  nfs3hp.2.cpp  nfs3hp.20.cpp  nfs3hp.21.cpp  nfs3hp.22.cpp  nfs3hp.23.cpp  nfs3hp.24.cpp  nfs3hp.25.cpp  nfs3hp.26.cpp  nfs3hp.27.cpp  nfs3hp.28.cpp  nfs3hp.29.cpp  nfs3hp.3.cpp  nfs3hp.30.cpp  nfs3hp.31.cpp  nfs3hp.32.cpp  nfs3hp.33.cpp  nfs3hp.34.cpp  nfs3hp.35.cpp  nfs3hp.36.cpp  (+54 more)
